<resources>
    <string name="hello">Hello World, RalleeActivity!</string>
    <string name="app_name">Rallee</string>
    <string name="label_back">Back</string>
    <string name="default_txt" />
    <string name="label_participants">Participants</string>
    <string name="label_settings">Settings</string>
    <string name="label_report">Report</string>
    <string name="label_create">Create</string>
    <string name="default_person_name">Name</string>
    <string name="add_users">Add Users</string>
    <string name="manage_group">Manage Group</string>
    <string name="hide_group">Hide Group</string>
    <string name="label_add_selected_users_to_the_group">Add selected users to the group</string>
    <string name="label_signOutFromFb">SignOut from FB</string>
    <string name="default_active_users_num">0</string>
    <string name="default_waiting_for_connection">Waiting for connection&#8230;</string>
    <string name="label_loading_friends">Loading friends&#8230;</string>
    <string name="label_invite_button_msg">Invite</string>
    <string name="label_invite">Invite</string>
    <string name="label_no_facebook_friends">There are no friends to invite.</string>
    <string name="label_invite_friends">Invite friends to Rallee</string>
    <string name="label_nearby">Nearby</string>
    <string name="label_random">Random</string>
    <string name="label_channels">Groups</string>
    <string name="label_alerts">Alerts</string>
    <string name="label_voicemail">Voicemail</string>
    <string name="label_online">Online</string>
    <string name="label_close">Close</string>
    <string name="label_ok">OK</string>
    <string name="label_delete">Delete</string>
    <string name="label_browse">Browse</string>
    <string name="label_favourite">Favourite</string>
    <string name="label_members">Members</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas felis arcu, lacinia eget pharetra vel, condimentum sit amet lacus. Aliquam iaculis erat ac odio aliquet interdum. Mauris tincidunt egestas magna, vitae pellentesque nulla malesuada nec. Vivamus scelerisque pulvinar dui at venenatis. Fusce sollicitudin facilisis lacus at suscipit. Nullam bibendum eleifend odio, ut consectetur nisl dignissim id. Nulla facilisi. Sed ultricies lacinia enim sed malesuada. Sed egestas magna in lorem consequat quis laoreet nibh lobortis. Mauris ac lectus nec nulla vulputate pretium. In hac habitasse platea dictumst.</string>
    <string name="label_new_group">New Group</string>
    <string name="label_my_channels">My Channels</string>
    <string name="label_unfavourite">Un-Favourite</string>
    <string name="label_no_channels_in_my_channels">Browse channels and add them as favourite</string>
    <string name="label_feedback">Feedback</string>
    <string name="edit_txt_checking_for_channel">Checking for Channel</string>
    <string name="label_faq">Rallee FAQ</string>
    <string name="label_welcome">Welcome</string>
    <string name="label_retrying">Retrying&#8230;</string>
    <string name="label_try_again">Please try again</string>
    <string name="label_loged_out">You are logged out!</string>
    <string name="label_loging_out">Logging out&#8230;</string>
    <string name="label_loging_failed">Login Failed:&#160;</string>
    <string name="label_fetching_name_and_pic">Fetching user name, profile pic</string>
    <string name="label_talk">Talk</string>
    <string name="label_clear">Clear</string>
    <string name="label_report_user">Report User</string>
    <string name="choose_a_friend">FRIEND</string>
    <string name="joined">JOINED&#160;</string>
    <string name="is_calling">&#160;IS CALLING</string>
    <string name="calling">CALLING&#160;</string>
    <string name="talking_to">&#160;</string>
    <string name="lobel_loading">Loading&#8230;</string>
    <string name="label_call">Call</string>
    <string name="label_call_user">Call user</string>
    <string name="label_calling">Calling&#160;</string>
    <string name="label_joining">Joining&#160;</string>
    <string name="want_to_call">Are you sure you want to call&#160;</string>
    <string name="send_offline_message_part1">Are you sure you want to send offline message to&#160;</string>
    <string name="send_offline_message_part2">&#160;to call you back?</string>
    <string name="add_user_to_conversation_part1">Are you sure you want to add&#160;</string>
    <string name="add_user_to_conversation_part2">&#160;to conversation?</string>
    <string name="searching_for_user">Searching for user&#8230;</string>
    <string name="label_connecting">Connecting&#8230;</string>
    <string name="label_connected">Connected</string>
    <string name="label_disconnected">Disconnected</string>
    <string name="label_reconnecting">Reconnecting</string>
  	<string name="waiting_for_internet">Waiting for internet connection&#8230;</string>
    <string name="waiting_for_connection">Waiting for connection</string>
    <string name="connecting_to_server">Connecting to server&#8230;</string>
    <string name="enable_gps_or_network_locating">Please enable GPS or allow locating by networks in phone settings</string>
    <string name="enable_gps">Enable GPS to get fine location</string>
    <string name="talk_with">Talk with&#160;</string>
    <string name="talk_with_unkown">Talk with unknown user</string>
    <string name="random_talk_with">Random talk with&#160;</string>
    <string name="random_talk">Random talk</string>
    <string name="entered_private_group">Entered your group:&#160;</string>
    <string name="talk_private_group">Talk on private group</string>
    <string name="group_call_with">Group call with&#160;</string>
    <string name="group_call">Group call</string>
    <string name="entered_public_group">Entered public group</string>
    <string name="entered_fb_group">Entered Facebook group</string>
    <string name="no_users_on_group">No users online in this group</string>
    <string name="missed_call">&#160;missed call.</string>
    <string name="missed_calls">&#160;missed calls.</string>
    <string name="please_update">Please update Rallee.</string>
    <string name="update">There is an Update of Rallee. Please install new version</string>
    <string name="delete_account_title">Delete Rallee Account</string>
    <string name="delete_account_text">Are you sure you want to disconnect from Rallee and delete Rallee Account?</string>
    <string name="disconnect_title">Disconnect</string>
    <string name="disconnect_text">Are you sure you want to disconnect from Rallee?</string>
    <string name="user_canceled_call">User has canceled call</string>
    <string name="has_canceled_call">&#160;has canceled call</string>
    <string name="user_rejected_call">User has rejected call</string>
    <string name="has_rejected_call">&#160;has rejected call</string>
    <string name="has_left_group">&#160;has left group</string>
    <string name="user_ended_call">User has ended call</string>
    <string name="is_busy">&#160;is busy</string>
    <string name="user_is_busy">User is busy</string>
    <string name="just_came_online">&#160;just came online</string>
    <string name="has_joined_group">&#160;has joined group</string>
    <string name="user_has_joined_group">User has joined a group</string>
    <string name="incoming_call">Incoming call from&#160;</string>
    <string name="enter_group_name">Enter name of the group:</string>
    <string name="is_in_conversation">&#160;is already the conversation.</string>
    <string name="no_description_group">no description for this group</string>
    <string name="settings_while_talking">You can not change settings while you are talking!</string>
    <string name="call_while_talking">You can not make this call while in conversation!</string>
    <string name="feedback_subject">Feedback to Rallee</string>
    <string name="feedback_body">Send us something nice :)</string>
    <string name="feedback_chooser">Send your feedback in:</string>
    <string name="report_subject">Report to Rallee</string>
    <string name="report_chooser">Send your report in:</string>
    <string name="random_disabled">Random Disabled</string>
    <string name="random_enabled">Random Enabled</string>
    <string name="text_to_speech_available">Text-to-speech is available</string>
    <string name="text_to_speech_install">"Please install text-to-speech on your device"</string>
    <string name="text_to_speech_not">Text-to-speech is not installed</string>
    <string name="location_service_title">Location</string>
    <string name="location_service_text">You must have location service turned on to perform this search. Open settings to turn it on?</string>
    <string name="label_group_created_part1">Group&#160;</string>
    <string name="label_group_created_part2">&#160;is created</string>
    <string name="labelSelectServer">Select Server</string>
    <string name="label_my_contacts">My Contacts</string>
    <string name="label_plus_symbol">+</string>
    <string name="hint_type_to_search">Search contacts&#8230;</string>
    <string name="label_search_no_match">No contacts match search</string>
    <string name="default_fb_group_name">FB Group Name</string>
    <string name="default_name">Name</string>
    <string name="label_cancel">Cancel</string>
    <string name="default_group_name">Group Name</string>
    <string name="label_group_details">Group Details</string>
    <string name="default_online_users_number">Online: 0</string>
    <string name="hint_desctiption">Enter description here</string>
    <string name="hint_group_name">enter group name here</string>
    <string name="label_audio">Audio</string>
    <string name="label_chose_speex_codec_quality_rate">Chose speex codec quality rate</string>
    <string name="label_codec_quality_rate">Codec quality rate</string>
    <string name="label_fine_locating_sum">Fine locating is more precize but requires GPS to be enabled.</string>
    <string name="label_location">Location</string>
    <string name="label_fine_locating_use">Use fine locating.</string>
    <string name="label_check_for_random">Check for Random</string>
    <string name="label_random_feature">Random feature</string>
    <string name="label_disconnect">Disconnect</string>
    <string name="label_disconnect_q">Are you sure you want to disconnect from Rallee?</string>
    <string name="label_delete_rallee_account">Delete Rallee Account</string>
    <string name="label_delete_rallee_account_q">Are you sure you want to delete Rallee Account?</string>
    <string name="label_about">About</string>
    <string name="label_about_rallee">About Rallee</string>
    <string name="label_about_text">See details about application</string>
    <string name="label_version">Version&#160;</string>
    <string name="label_about_copyright">\u00A9 2012&#8211;2014 All rights reserved</string>
    <string name="by_logging_accept">By logging in, you accept Rallee\'s</string>
    <string name="label_tos"><u>Terms of Service</u></string>
    <string name="label_and">&#160;and&#160;</string>
    <string name="label_privacy"><u>Privacy Policy</u>.</string>
	   <string name="label_synchronization">Synchronization</string>
	   <string name="label_sync_title">Sync my data</string>
	   <string name="label_sync_text">Synchronize your Facebook data, friends and groups</string>
	<string name="label_settings_over_18_title">Check if you are over 18</string>
    <string name="label_settings_over_18">Over 18 year of age</string>
</resources>