<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/grill_background"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:weightSum="10" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@drawable/contacts_list_header_bg"
        android:gravity="center"
        android:text="@string/label_about"
        android:textAppearance="@android:style/TextAppearance.Large" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:gravity="center|bottom"
        android:text="@string/app_name"
        android:textAppearance="@android:style/TextAppearance.Large"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvAboutVersion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/label_version"
        android:textAppearance="@android:style/TextAppearance.Medium" />

    <ImageView
        android:layout_width="124dp"
        android:layout_height="wrap_content"
        android:layout_weight="2.66"
        android:src="@drawable/main_ui_talk_button_normal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/label_about_copyright"
        android:textAppearance="@android:style/TextAppearance.Medium" />

</LinearLayout>