<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background_wood_grain"
    android:gravity="center_vertical"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1" >

        <ImageView
            android:id="@+id/logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:src="@drawable/login_logo" />

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/logo"
            android:layout_margin="10sp"
            android:gravity="center_horizontal|center"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/txt"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/default_txt" 
                android:singleLine="true"
                android:gravity="center"/>

            <ImageView
                android:id="@+id/imgLoginDescriptiveText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/login_descriptive_text" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_margin="10sp"
            android:gravity="center"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/tvProgressStatusLoginActivity"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/default_waiting_for_connection"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <ProgressBar
                 android:layout_margin="10sp"
                android:id="@+id/progressBarLoginActivity"
                style="?android:attr/progressBarStyleSmall"
                android:layout_width="25dp"
                android:layout_height="25dp" />
        </LinearLayout>

        <ImageView
            android:id="@+id/imgTalkChizel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/login_talk_chizel" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/llUpMainActivity"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="3"
        android:gravity="center"
        android:orientation="vertical" >

        <!-- <com.facebook.widget.LoginButton -->
        <!-- android:id="@+id/btnLoginLogInActivity" -->
        <!-- android:layout_width="match_parent" -->
        <!-- android:layout_height="wrap_content" -->
        <!-- android:layout_margin="10dp" -->
        <!-- android:layout_marginBottom="0dp" -->
        <!-- android:layout_marginTop="0dp" -->
        <!-- android:layout_weight="0.85" -->
        <!-- android:enabled="false" -->
        <!-- android:scaleType="centerInside" -->
        <!-- android:textColor="@color/white" /> -->

        <ImageButton
            android:id="@+id/btnLoginLogInActivity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_marginBottom="0dp"
            android:layout_marginTop="0dp"
            android:background="@color/transparent"
            android:enabled="false"
            android:scaleType="centerInside"
            android:src="@drawable/login_button" />
        
    </LinearLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp" >

        <TextView
            android:id="@+id/tv_by_logging"
            android:layout_width="wrap_content"
            android:layout_height="15dp"
            android:layout_centerHorizontal="true"
            android:text="@string/by_logging_accept"
            android:textSize="10sp" />

        <LinearLayout
            android:id="@+id/ll_login_tos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_by_logging"
            android:layout_centerHorizontal="true"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/tv_login_tos"
                android:layout_width="wrap_content"
                android:layout_height="15dp"
                android:text="@string/label_tos"
                android:textSize="10sp" />

            <TextView
                android:id="@+id/tv_and"
                android:layout_width="wrap_content"
                android:layout_height="15dp"
                android:text="@string/label_and"
                android:textSize="10sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_login_privacy"
            android:layout_width="wrap_content"
            android:layout_height="15dp"
            android:layout_below="@+id/ll_login_tos"
            android:layout_centerHorizontal="true"
            android:text="@string/label_privacy"
            android:textSize="10sp" />
    </RelativeLayout>

</LinearLayout>