<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_root"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="20dp"
    android:background="@drawable/confirm_random_dialog_background"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/tvLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingBottom="10dp"
        android:paddingTop="15dp"
        android:text="@string/default_name"
        android:textAppearance="@android:style/TextAppearance.Medium"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/etName"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="10dp"
        android:layout_weight="1"
        android:background="@drawable/confirm_random_dialog_btnyes_pressed"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:singleLine="true"
        android:textAppearance="@android:style/TextAppearance.Medium"
        android:textColor="@drawable/confirm_random_dialog_button_text_color"
        android:textStyle="bold" >

        <requestFocus />
    </EditText>

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginRight="2dp"
            android:layout_weight="1"
            android:background="@drawable/confirm_random_dialog_button_lighter"
            android:text="@string/label_cancel"
            android:textAppearance="@android:style/TextAppearance.Medium"
            android:textColor="@drawable/confirm_random_dialog_button_text_color"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnCreate"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="@drawable/confirm_random_dialog_button_darker"
            android:text="@string/label_create"
            android:textAppearance="@android:style/TextAppearance.Medium"
            android:textColor="@drawable/confirm_random_dialog_button_text_color"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>